# blender-cnc-templates

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  README.md  bootstrap.sh  build.sh  fill_env.sh  pylintrc  pyproject.toml  test.sh
cyclesx/: CnC_CyclesX_1_00_alpha1.7z  build.sh  constants.py  generate_scripts.py  main.py  requirements.txt  scenes.py  world_materials.py
eevee/: CnC_Eevee_1_00_alpha1.7z  build.sh  constants.py  generate_scripts.py  main.py  plane_materials.py  scenes.py  world_materials.py
eevee_next/: README.md  constants.py  generate_scripts.py  main.py  plane_materials.py  scenes.py  world_materials.py
future_five/: generate_scripts.py  main.py  scenes.py  world_materials.py
hi_five/: constants.py  generate_scripts.py  main.py  plane_materials.py  requirements.txt
legacy/: README.md  build.sh  compat.py  constants.py  generate_scripts.py  main.py  plane_materials.py  requirements.txt  scene_builder.py  world_materials.py
legacy_cycles/: build.sh  constants.py  generate_scripts.py  main.py  plane_materials.py  scenes.py  world_materials.py
legacy_eevee/: README.md  constants.py  generate_scripts.py  main.py  requirements.txt
shared/: __init__.py  build_utils.py  compat.py  compat_279.py  compat_280.py  compat_293.py  compat_300.py  compat_420.py  compat_500.py  constants.py  desolated_hdri.exr  generic_hdri.exr  node_arrange.py  node_arrange_legacy.py  plane_materials.py  scene_names.py  scenes.py  script_gen.py  world_materials.py
tests/: conftest.py  test_build_utils_bpy.py  test_compat.py  test_env.py  (+6 more)
(+38 files in other folders)
